// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div>
  <Suggestions
    suggestions="permission_templates"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="permission_templates.page"
  />
  <Home
    permissionTemplates={[]}
    permissions={[]}
    ready={false}
    refresh={[Function]}
    topQualifiers={
      [
        "TRK",
      ]
    }
  />
</div>
`;

exports[`should render correctly 2`] = `
<div>
  <Suggestions
    suggestions="permission_templates"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="permission_templates.page"
  />
  <Home
    permissionTemplates={
      [
        {
          "createdAt": "2019-02-07T17:23:26+0100",
          "defaultFor": [
            "TRK",
          ],
          "description": "Default permission template",
          "id": "1",
          "name": "Default template",
          "permissions": [
            {
              "description": "Code viewer permission",
              "groupsCount": 1,
              "key": "codeviewer",
              "name": "See Source Code",
              "usersCount": 0,
              "withProjectCreator": false,
            },
            {
              "description": "Admin permission",
              "groupsCount": 1,
              "key": "admin",
              "name": "Administer",
              "usersCount": 0,
              "withProjectCreator": false,
            },
          ],
          "updatedAt": "2019-02-07T17:23:26+0100",
        },
      ]
    }
    permissions={
      [
        {
          "description": "Code viewer permission",
          "key": "codeviewer",
          "name": "See Source Code",
        },
        {
          "description": "Admin permission",
          "key": "admin",
          "name": "Administer",
        },
      ]
    }
    ready={true}
    refresh={[Function]}
    topQualifiers={
      [
        "TRK",
      ]
    }
  />
</div>
`;
